# ConiferOS

./: Makefile  README.md  boot.asm  commands.txt  message.txt
programs/blank/: Makefile  blank.asm  linker.ld
programs/test_elf_loader/: Makefile  print.asm
programs/test_print_syscall/: Makefile  linker.ld  print.asm
programs/test_sum_syscall/: Makefile  linker.ld
rust-coniferos/: Cargo.toml  build.rs
rust-coniferos/.cargo/: config.toml
rust-coniferos/src/: README.md  lib.rs
scripts/: README.md  README.txt  build.sh  build_binutils.sh  build_gcc.sh  getBinUtilsGCC.sh  install_gcc_deps.sh  install_gcc_deps_yum.sh
src/: config.h  kernel.asm  kernel.c  kernel.h  linker.ld  status.h
src/boot/: boot.asm
src/disk/: disk.c  disk.h  disk_stream.c  disk_stream.h
src/fs/: file.c  file.h  pparser.c  pparser.h
src/gdt/: gdt.asm  gdt.c  gdt.h
src/idt/: idt.asm  idt.c  idt.h
src/io/: io.asm  io.h
src/isr80h/: heap.c  heap.h  io.c  io.h  isr80h.c  isr80h.h  misc.c  misc.h  process.c  process.h
src/keyboard/: keyboard.c  keyboard.h  ps2_keyboard.c  ps2_keyboard.h
src/memory/: memory.c  memory.h
src/print/: print.c  print.h
src/rust_interface/: rust_coniferos.h
src/string/: string.c  string.h
src/task/: process.c  process.h  task.asm  task.c  task.h  tss.asm  tss.h
user_programs/echo/: Makefile  linker.ld
user_programs/shell/: Makefile
user_programs/stdlib/: Makefile
user_programs/test_c_main/: Makefile  main.c
user_programs/test_elf_loader/: README.md
user_programs/test_print_syscall/: linker.ld
user_programs/test_stdlib/: Makefile  (+2 more)
(+30 files in other folders)
